--- a/app/src/main/res/layout/fragment_clotheslist.xml
+++ b/app/src/main/res/layout/fragment_clotheslist.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewFragment">
+    tools:context=".ClothesListFragment">
 
     <TextView
         android:id="@+id/new_view"
@@ -12,6 +12,6 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_new" />
+        android:text="@string/title_clothesList" />
 
 </FrameLayout>
