--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -8,9 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <android.support.v7.widget.AppCompatImageView
+
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/nullpic"
+        android:src="@drawable/testicon"
 
         />
 
