--- a/app/src/main/res/layout/fragment_clothes_calendar.xml
+++ b/app/src/main/res/layout/fragment_clothes_calendar.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:orientation="vertical">
 <CalendarView
     android:id="@+id/calendar"
@@ -32,10 +33,11 @@
     android:text="@string/calendar_hint"/>
 
         <fragment android:name="com.example.wardrobe.WardrobeFragment"
+            android:tag="@string/container_wear_history"
             android:id="@+id/headlines_fragment"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 </FrameLayout>
