--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -7,11 +7,13 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    <android.support.v7.widget.AppCompatImageView
 
+    <ImageView
+
+        android:id="@+id/calendar_clothes_item"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/testicon"
+
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
