--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,22 +4,22 @@
 
     <item
         android:id="@+id/navigation_wardrobe"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/closet"
         android:title="@string/title_wardrobe" />
 
     <item
         android:id="@+id/navigation_clothesList"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/hanger"
         android:title="@string/title_clothesList" />
 
     <item
         android:id="@+id/navigation_clothesCalendar"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/calendar"
         android:title="@string/title_clothesCalendar" />
 
     <item
         android:id="@+id/navigation_me"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/personal"
         android:title="@string/title_me" />
 
 </menu>
