--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -50,21 +50,7 @@
                 />
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/sign_up_nickname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="20dp"
 
-            android:hint="@string/prompt_nickname"
-
-            android:selectAllOnFocus="true"
-            />
 
         <EditText
             android:id="@+id/sign_up_password"
@@ -74,9 +60,26 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="20dp"
 
             android:hint="@string/prompt_password"
+
+            android:inputType="textPassword"
+            android:selectAllOnFocus="true"
+            />
+
+        <EditText
+            android:id="@+id/sign_up_repasswd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
+
+            android:hint="@string/prompt_repasswd"
 
             android:inputType="textPassword"
             android:selectAllOnFocus="true"
