--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
 
-        android:hint="@string/prompt_email"
+        android:hint="@string/prompt_username"
         android:inputType="textPostalAddress"
 
 />
